Fix splash page alignment

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,12 +1,12 @@
 .footer-main {
     background-color: #f5f5f5;
-    margin-top: 100px;
+    // margin-top: 100px;
     border-top: 1px solid #cccccc;
-    padding: 50px 150px 0 150px;
+    padding-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 1300px;
+    width: 100%;
 }
 
 .contact-logo-group {
