--- a/app/assets/stylesheets/search_form.scss
+++ b/app/assets/stylesheets/search_form.scss
@@ -1,5 +1,7 @@
 .search-bar-search-form {
-    width: 100%;
+    // width: 100%;
+    margin: auto;
+    width: 80%;
     height: 100%;
     display: flex;
     justify-content: space-between;
