--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -1,16 +1,17 @@
 .splash {
-    height: 60vh;
-    min-width: 1300px;
+    height: 80vh;
+    width: 100%;
     background-image: image-url('splash_background.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    padding: 28px 160px;
-    
 }
 
 .login-signup {
     display: flex;
     justify-content: flex-end;
     height: 35px;
+    padding: 5vh;
 }
 
 .header-group {
@@ -30,13 +31,12 @@
 
 .splash-logo {
     display: block;
-    margin-top: 50px;
+    margin-top: 5vh;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 30px;
-    width: 50%;
-    width: 200px;
-    height: 100px;
+    margin-bottom: 3vh;
+    width: 30vh;
+    height: 15vh;
 }
 
 .sign-up-button {
@@ -96,22 +96,27 @@
 }
 
 .splash-page-category-section .splash-page-category-link .splash-page-category-img {
-    width: 300px;
-    height: 250px;
-    padding: 20px;
+    width: 80%;
+    height: 80%;
+    // padding: 20px;
 }
 
 .splash-page-category-section {
-    margin: 100px 100px 0 100px;
+    padding: 100px 0;
+    margin: auto;
     display: flex;
-    justify-content: space-between;
+    width: 100%;
+    height: 35vh;
 }
 
 .splash-page-category-link {
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: #2b73bb;
     font-weight: bold;
+    width: 100%;
+    height: 100%;
 }
